# aubo_robot

aubo_controller/: CMakeLists.txt  package.xml
aubo_controller/include/: aubo_hardware_interface_obj.h  joint_relay_handler.h  joint_trajectory_action.h  param_utils.h  utils.h  utils_.h
aubo_controller/script/aubo_controller/: aubo_robot_simulator  trajectory_speed.py
aubo_controller/src/: aubo_hardware_interface.cpp  aubo_hardware_interface_obj.cpp  aubo_robot_simulator.cpp  joint_trajectory_action.cpp
aubo_description/config/: gazebo_controllers.yaml  urdf.rviz
aubo_description/launch/: display.launch  gazebo.launch
aubo_description/urdf/: aubo_i5.xacro  aubo_i5_gazebo.xacro  aubo_i5_macro.xacro
aubo_driver/: CMakeLists.txt
aubo_driver/include/aubo_driver/: AuboRobotMetaType.h  aubo_driver.h  new_driver.h  robot_state.h  robotiomatetype.h  serviceinterface.h
aubo_driver/src/: aubo_driver.cpp  driver_node.cpp  new_driver.cpp  new_driver_node.cpp  teach_controller.cpp  testAuboAPI.cpp
aubo_i5_moveit_config/: .setup_assistant  package.xml
aubo_i5_moveit_config/config/: aubo_i5.srdf  gazebo_controllers.yaml  joint_limits.yaml
aubo_i5_moveit_config/launch/: aubo_i5_moveit_controller_manager.launch.xml  demo.launch  gazebo.launch  move_group.launch  moveit.rviz  planning_context.launch  trajectory_execution.launch.xml
aubo_msgs/: CMakeLists.txt
aubo_msgs/msg/: TeachCommand.msg
aubo_planner/: CMakeLists.txt  package.xml
aubo_robot/: package.xml
aubo_ros_control/: CMakeLists.txt  package.xml
aubo_ros_control/config/: controllers.yaml
aubo_ros_control/include/aubo_ros_control/: aubo_hardware_interface_obj.h
aubo_ros_control/launch/: aubo_ros_control.launch
aubo_ros_control/src/: aubo_hardware_interface.cpp  aubo_hardware_interface_obj.cpp
