<?xml version="1.0"?>
<package format="2">
  <name>aubo_ros_control</name>
  <version>0.0.0</version>
  <description>The aubo_ros_control package</description>

  <maintainer email="ian@todo.todo">ian</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
